--- a/index.html
+++ b/index.html
@@ -724,11 +724,11 @@ document.getElementById("demo").innerHTML = days + "<font color='green'> Days,</
     <br>
     <center>
         <!-- Developed by HIVEcorp YT -->
-        <a class="footerbtn" href="whatsapp://send?text= 🇮🇳 🇮🇳 🇮🇳 🇮🇳 *Indian Independence Day* Agar Tum Ek Sachhe Indian Ho Toh Ye Massage Sabko Bhejo, Aur Wish Karo . 🇮🇳 Jai Hind 🇮🇳-> (window.location.href.split("?")[0] ) " data-action="share/whatsapp/share">
+        <a class="footerbtn" href="whatsapp://send?text= 🇮🇳 🇮🇳 🇮🇳 🇮🇳 *Indian Independence Day* Agar Tum Ek Sachhe Indian Ho Toh Ye Massage Sabko Bhejo, Aur Wish Karo . 🇮🇳 Jai Hind 🇮🇳-> https://amritmahotsav.ga/ " data-action="share/whatsapp/share">
             <img width="22px" height="22px" src="https://www.freepnglogos.com/uploads/whatsapp-logo-image-8.png" />
             <b style="font-size: 26px;">Share</b>
         </a>
-        <a class="footerbtn1" href="https://www.facebook.com/sharer/sharer.php?u=https://siteshort.site/" target="_blank" title="Share this post on Facebook" class="facebook">
+        <a class="footerbtn1" href="https://www.facebook.com/sharer/sharer.php?u=https://amritmahotsav.ga/" target="_blank" title="Share this post on Facebook" class="facebook">
             <img width="22px" height="22px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/768px-Facebook_Logo_%282019%29.png" />
             <b style="font-size: 26px;">Share</b>
         </a>
