--- a/index.html
+++ b/index.html
@@ -682,6 +682,11 @@ document.getElementById("demo").innerHTML = days + "<font color='green'> Days,</
   <source src="https://pwdown.com/112914/13. Jai Ho.mp3" type="audio/mpeg">
 </audio>
 
+<!-- Ad Code 5 Here -->
+<script>(function(d,z,s){s.src='//'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('tauvoojo.net',5303730,document.createElement('script'))</script>
+
+<script>(function(d,z,s){s.src='//'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('oaphoace.net',5303722,document.createElement('script'))</script>
+
 <div  id="formBox" class="formBox" style="left:6%;right:6%" >
 			<input type="text" name="name" class="nameTextBox"id="nameTextBox" placeholder="👉 Please Enter Your Name">
 			<div class="goButton" id="goButton" onclick="if (!window.__cfRLUnblockHandlers) return false; createGreeting()" data-cf-modified-3c06e57a7ac22d0bc0d6a22b-="">👉Click</div>
