--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T24M66T3S7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T24M66T3S7');
+</script>
 
 	<meta name="google" content="notranslate" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
